Using a CNN to predict labels with a greater accuracy rate

--- a/MNIST.ipynb
+++ b/MNIST.ipynb
@@ -267,6 +267,276 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating some helper functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# INIT WEIGHTS\n",
+    "def init_weights(shape):\n",
+    "    init_random_dist = tf.truncated_normal(shape,stddev=0.1)\n",
+    "    return tf.Variable(init_random_dist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# INIT BIAS\n",
+    "def init_bias(shape):\n",
+    "    init_bias_vals = tf.constant(0.1, shape=shape)\n",
+    "    return tf.Variable(init_bias_vals)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# CONV2D Helpder\n",
+    "def conv2d(x,W):\n",
+    "    # x is the input tensor -> [batch,H,W,Channels]\n",
+    "    # W is the kernel -> [Filter_H, Filter_W, Channels_In, Channels_Out]\n",
+    "    return tf.nn.conv2d(x,W,strides=[1,1,1,1],padding='SAME') # Same enables zero padding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# POOLING LAYER FUNC\n",
+    "def max_pool_2x2(x):\n",
+    "    # x is the input tensor -> [batch,H,W,Channels]\n",
+    "    return tf.nn.max_pool(x,ksize=[1,2,2,1],strides=[1,2,2,1],padding='SAME')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convolutional Layer\n",
+    "def convolutional_layer(input_x,shape):\n",
+    "    W = init_weights(shape)\n",
+    "    b = init_bias([shape[3]])\n",
+    "    return tf.nn.relu(conv2d(input_x,W)+b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Normal Layer\n",
+    "def normal_layer(input_layer,size):\n",
+    "    input_size = int(input_layer.get_shape()[1])\n",
+    "    W = init_weights([input_size,size])\n",
+    "    b = init_bias([size])\n",
+    "    return tf.matmul(input_layer,W)+b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating placeholders\n",
+    "x = tf.placeholder(tf.float32,shape=[None,784])\n",
+    "y_true = tf.placeholder(tf.float32,shape=[None,10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Actually make the layers\n",
+    "x_image = tf.reshape(x,[-1,28,28,1])\n",
+    "convo_1 = convolutional_layer(x_image,shape=[5,5,1,32]) #32 features for each 5x5 patch\n",
+    "convo_1_pool = max_pool_2x2(convo_1)\n",
+    "\n",
+    "convo_2 = convolutional_layer(convo_1_pool,shape=[5,5,32,64]) # Taking in 32 features instead of the 1 greyscale feature earlier\n",
+    "convo_2_pool = max_pool_2x2(convo_2)\n",
+    "convo_2_flat = tf.reshape(convo_2_pool,[-1,7*7*64]) # In order to flatten\n",
+    "full_layer_one = tf.nn.relu(normal_layer(convo_2_flat,1024))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From <ipython-input-40-f475017baa63>:3: calling dropout (from tensorflow.python.ops.nn_ops) with keep_prob is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use `rate` instead of `keep_prob`. Rate should be set to `rate = 1 - keep_prob`.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Setup Dropout\n",
+    "hold_prob = tf.placeholder(tf.float32)\n",
+    "full_one_dropout = tf.nn.dropout(full_layer_one,keep_prob=hold_prob)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = normal_layer(full_one_dropout,10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Defining a loss function\n",
+    "cross_entropy = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(labels=y_true,logits=y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Defining an optimizer\n",
+    "optimizer = tf.train.AdamOptimizer(learning_rate=0.001)\n",
+    "train = optimizer.minimize(cross_entropy)\n",
+    "init = tf.global_variables_initializer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Currently on step 0\n",
+      "Accuracy is:\n",
+      "0.098\n",
+      "\n",
+      "\n",
+      "Currently on step 100\n",
+      "Accuracy is:\n",
+      "0.942\n",
+      "\n",
+      "\n",
+      "Currently on step 200\n",
+      "Accuracy is:\n",
+      "0.9615\n",
+      "\n",
+      "\n",
+      "Currently on step 300\n",
+      "Accuracy is:\n",
+      "0.9732\n",
+      "\n",
+      "\n",
+      "Currently on step 400\n",
+      "Accuracy is:\n",
+      "0.9752\n",
+      "\n",
+      "\n",
+      "Currently on step 500\n",
+      "Accuracy is:\n",
+      "0.9756\n",
+      "\n",
+      "\n",
+      "Currently on step 600\n",
+      "Accuracy is:\n",
+      "0.9787\n",
+      "\n",
+      "\n",
+      "Currently on step 700\n",
+      "Accuracy is:\n",
+      "0.9817\n",
+      "\n",
+      "\n",
+      "Currently on step 800\n",
+      "Accuracy is:\n",
+      "0.9813\n",
+      "\n",
+      "\n",
+      "Currently on step 900\n",
+      "Accuracy is:\n",
+      "0.9828\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "steps = 1000 # Training the model only on a 1000 steps due to computational limits :)\n",
+    "\n",
+    "with tf.Session() as sess:\n",
+    "    \n",
+    "    sess.run(init)\n",
+    "    \n",
+    "    for i in range(steps):\n",
+    "        \n",
+    "        batch_x , batch_y = mnist.train.next_batch(50)\n",
+    "        \n",
+    "        sess.run(train,feed_dict={x:batch_x,y_true:batch_y,hold_prob:0.5})\n",
+    "        \n",
+    "        # Run the accuracy metric every 100 steps\n",
+    "        if i%100 == 0:\n",
+    "            \n",
+    "            print('Currently on step {}'.format(i))\n",
+    "            print('Accuracy:')\n",
+    "            # Test the Train Model\n",
+    "            accuracy_matches = tf.equal(tf.argmax(y_pred,1),tf.argmax(y_true,1))\n",
+    "\n",
+    "            acc = tf.reduce_mean(tf.cast(accuracy_matches,tf.float32))\n",
+    "\n",
+    "            print(sess.run(acc,feed_dict={x:mnist.test.images,y_true:mnist.test.labels,hold_prob:1.0}))\n",
+    "            print('\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using a CNN gives us a major accuracy boost, with only a 1000 trainiing steps crossing an accuracy rate of 98.2%"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict_label(myImage):\n",
+    "    # TODO: Use the model to predict image labels\n",
+    "    return None"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
